SILGen: Fix memory leak when calling constructor requirement of @objc protocol

Fixes <rdar://problem/30478887> / <https://bugs.swift.org/browse/SR-3935>.